# =================================================================================
# PROJECT
# =================================================================================

# Project Name
set(PROJECT_NAME "myExe")

# =================================================================================
# CONFIG
# =================================================================================

# =================================================================================
# HEADERS
# =================================================================================

set(MY_EXE_HEADERS #
    "pch.hpp"
)

# =================================================================================
# SOURCES
# =================================================================================

set(MY_EXE_SOURCES #
    "main.cpp"
)

message(STATUS "Lib = ${mylib}")

# =================================================================================
# BUILD
# =================================================================================

# Add Executable-Object
add_executable(myexe ${MY_EXE_HEADERS} ${MY_EXE_SOURCES})

# Configure Executable-Object
set_target_properties(
  myexe PROPERTIES OUTPUT_NAME "shared_library_example" RUNTIME_OUTPUT_DIRECTORY "${BIN_DIR}"
)

# Include MyLib Public-Headers
include_directories("../lib/public")

target_link_libraries(myexe mylib)
